--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -30,7 +30,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
          args: >
-            -Dsonar.organization=Deepti
+            -Dsonar.organization=deepti-shitole
             -Dsonar.projectKey=python-test-github-actions
        
         
