--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Run tests
       run: |
         cd src
-        python -m pytest addition.py
+        pytest test_addition.py
         
