--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -31,4 +31,17 @@ jobs:
       run: |
         cd src
         pytest test_addition.py
+
+    - name: Copy coverage report
+      run: |
+        mkdir -p coverage
+        cp -r src/htmlcov/* coverage/
+      if: always()
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v2
+        with:
+      name: coverage-report
+      path: coverage/
+      if: always()
+
         
