--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -23,26 +23,21 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-
-    
-        
+        pip install coverage  # Install coverage
 
     - name: Run tests
       run: |
         cd src
         pytest test_addition.py
 
-    - name: Copy coverage report
+    - name: Generate coverage report
       run: |
-        mkdir -p coverage
-        cp -r src/htmlcov/* coverage/
-      if: always()
-    
+        coverage run --source=. -m pytest test_addition.py
+        coverage html -d coverage/  # Generate HTML coverage report
+
     - name: Upload coverage report
       uses: actions/upload-artifact@v2
       with:
         name: coverage-report
         path: coverage/
       if: always()
-
-        
