--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -40,5 +40,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: coverage-report
-        path: src/coverage/  # Corrected path for uploading coverage report
+        path:  coverage.xml  
       if: always()
