--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=deepti-shitole_python-test-github-actions
 sonar.organization=deepti-shitole
+sonar.python.coverage.reportPaths=coverage.xml
+
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=python-test-github-actions
