--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,47 +1,45 @@
-name: My First GitHub Actions
+name: Build
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python: [3.8, 3.9] # Define the Python versions to test
 
     steps:
-    - uses: actions/checkout@v3
-    
-      
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        pip install coverage  # Install coverage
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python }}
 
-    - name: Run tests
-      run: |
-        cd src
-        pytest test_addition.py
+      - name: Install tox and any other packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox
 
-    - name: Generate coverage report
-      run: |
-        cd src
-        coverage run --source=. -m pytest test_addition.py
-        coverage html -d coverage_html  # Generate HTML coverage report
+      - name: Run tox with coverage
+        run: tox -e py -- -m coverage run --source=. -m pytest
+        env:
+          COVERAGE_FILE: .coverage
 
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage-report
-        path: src/coverage_html
-        
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
           
-      if: always()
+           
