--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=deepti-shitole_python-test-github-actions
 sonar.organization=deepti-shitole
+sonar.host.url=https://sonarcloud.io
+sonar.login=sonar_token
 sonar.python.coverage.reportPaths=coverage.xml
 
 
