--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,18 +26,14 @@ jobs:
         PYTHONPATH: ${{ github.workspace }}/src
       run: |
         python tests/test_addition.py
-           coverage xml
 
     - name: Download SonarScanner
       run: |
-        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.4.0.2170.zip
-        unzip sonar-scanner-cli-4.4.0.2170.zip
+       wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
+       unzip sonar-scanner-cli-4.2.0.1873-linux.zip
 
     - name: Run SonarScanner Analysis
-      run: |
-        sonar-scanner-4.4.0.2170/bin/sonar-scanner \
-        -Dsonar.sources=src \
-        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-        -Dsonar.analysis.mode=preview
-
-
+      run: sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
+           -Dsonar.sources=src \
+           -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+           -Dsonar.analysis.mode=preview
