--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,13 @@ jobs:
       run: |
        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
        unzip sonar-scanner-cli-4.2.0.1873-linux.zip
+       
+    - name: Set Java Version
+      run: export JAVA_HOME=/path/to/java
 
     - name: Run SonarScanner Analysis
       run: |
-       export SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
-       sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
-       -Dsonar.sources=src \
-       -Dsonar.analysis.mode=preview
+        sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
+        -Dsonar.sources=src \
+        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+        -Dsonar.analysis.mode=preview
