--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
@@ -29,15 +35,16 @@ jobs:
 
     - name: Download SonarScanner
       run: |
-       wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
-       unzip sonar-scanner-cli-4.2.0.1873-linux.zip
-       
+        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
+        unzip sonar-scanner-cli-4.2.0.1873-linux.zip
+
     - name: Set Java Version
-      run: export JAVA_HOME=/path/to/java
+      run: export JAVA_HOME=C:\Program Files\Java\jdk-16.0.1\bin\java.exe
+
 
     - name: Run SonarScanner Analysis
       run: |
         sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
         -Dsonar.sources=src \
         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-        -Dsonar.analysis.mode=preview
+        -Dsonar.analysis.mode=preview 
