--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
         unzip sonar-scanner-cli-4.2.0.1873-linux.zip
 
     - name: Set Java Version
-      run: export JAVA_HOME=C:\Program Files\Java\jdk-16.0.1\bin\java.exe
-
+      run: |
+        echo 'export JAVA_HOME="C:\Program Files\Java\jdk-16.0.1"' >> $GITHUB_ENV
 
     - name: Run SonarScanner Analysis
       run: |
