--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Set Java Version
       run: |
-        echo 'export JAVA_HOME="C:\Program Files\Java\jdk-16.0.1"' >> $GITHUB_ENV
+        echo 'export JAVA_HOME=C:\\Program Files\\Java\\jdk-16.0.1' >> $GITHUB_ENV
 
     - name: Run SonarScanner Analysis
       run: |
