--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,21 +21,25 @@ jobs:
         pip install -r requirements.txt
         pip install coverage
 
-    - name: Download and install SonarScanner
-      run: |
-        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.12008.zip
-        unzip sonar-scanner-cli-4.8.0.12008.zip
-        export PATH=$PATH:/path/to/sonar-scanner/bin
-
     - name: Run tests with coverage
       env:
         PYTHONPATH: ${{ github.workspace }}/src
       run: |
         python tests/test_addition.py
 
+    - name: Download SonarScanner
+      run: |
+        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
+        unzip sonar-scanner-cli-4.2.0.1873-linux.zip
+
+    - name: Set Java Version
+      run: |
+        echo 'export JAVA_HOME=C:\\Program Files\\Java\\jdk-16.0.1' >> $GITHUB_ENV
+
+
     - name: Run SonarScanner Analysis
       run: |
-        sonar-scanner \
+        sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
         -Dsonar.sources=src \
         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-        -Dsonar.analysis.mode=preview 
+        -Dsonar.analysis.mode=preview
