--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
         unzip sonar-scanner-cli-4.2.0.1873-linux.zip
 
     - name: Set Java Version
-      run: export JAVA_HOME="C:\Program Files\Java\jdk-16.0.1"
+      run: |
+        export JAVA_HOME="/usr/lib/jvm/java-16-openjdk-amd64"
 
     - name: Run SonarScanner Analysis
       run: |
