--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,19 @@ jobs:
         wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
         unzip sonar-scanner-cli-4.2.0.1873-linux.zip
 
-    - name: Set Java Version
-      run: |
-        export JAVA_HOME="/usr/lib/jvm/java-16-openjdk-amd64"
+    - name: Set up JDK 16
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '16'
 
     - name: Run SonarScanner Analysis
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        JAVA_HOME: ${{ steps.setup-java.outputs.path }}
       run: |
         sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
-        -Dsonar.sources=src \
-        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-        -Dsonar.analysis.mode=preview 
+          -Dsonar.sources=src \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.coverage.jacoco.xmlReportPaths=coverage.xml
