--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,13 @@ jobs:
         distribution: 'adopt'
         java-version: '17'
 
+    - name: Verify Java Version
+      run: java -version
+
     - name: Run SonarScanner Analysis
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        JAVA_HOME: ${{ steps.setup-java.outputs.path }}
+        JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/17*/x64
       run: |
         sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
           -Dsonar.sources=src \
