--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,31 +21,19 @@ jobs:
         pip install -r requirements.txt
         pip install coverage
 
-    - name: Download and Unzip SonarScanner
+    - name: Download SonarScanner
       run: |
         wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873-linux.zip
-        unzip sonar-scanner-cli-4.2.0.1873-linux.zip -d $HOME/sonar-scanner
-        export PATH="$HOME/sonar-scanner/sonar-scanner-4.2.0.1873-linux/bin:$PATH"
+        unzip sonar-scanner-cli-4.2.0.1873-linux.zip
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: '17'
-
-    - name: Verify Java Version
+    - name: Set Java Version
       run: |
-        java -version
-        javac -version
+        export JAVA_HOME="/opt/hostedtoolcache/Java_Adopt_jdk/17.0.10/x64"
 
     - name: Run SonarScanner Analysis
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/17*/x64
-        PATH: $HOME/sonar-scanner/sonar-scanner-4.2.0.1873-linux/bin:$JAVA_HOME/bin:$PATH
       run: |
-        sonar-scanner \
-          -Dsonar.sources=src \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-          -Dsonar.coverage.jacoco.xmlReportPaths=coverage.xml
+        sonar-scanner-4.2.0.1873-linux/bin/sonar-scanner \
+        -Dsonar.sources=src \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+        -Dsonar.coverage.jacoco.xmlReportPaths=coverage.xml
