--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -28,7 +31,7 @@ jobs:
 
     - name: Set Java Version
       run: |
-        export JAVA_HOME="/opt/hostedtoolcache/Java_Adopt_jdk/17.0.10/x64"
+        export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
 
     - name: Run SonarScanner Analysis
       run: |
