--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,8 @@ sonar.organization=deepti-shitole
 sonar.host.url=https://sonarcloud.io
 sonar.login=sonar_token
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.java.binaries=**/*.java
+
 
 
 # This is the name and version displayed in the SonarCloud UI.
