--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,46 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest coverage
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest coverage
 
-    - name: Run tests and collect coverage
-      run: |
-        coverage run -m pytest
+      - name: Run tests and collect coverage
+        run: |
+          coverage run -m pytest
 
-    - name: Generate HTML coverage report
-      if: always() # Ensure this step runs even if previous steps fail
-      run: |
-        coverage html
-        mv htmlcov coverage_report
-        echo "Coverage report is ready"
+      - name: Generate HTML coverage report
+        if: always() # Ensure this step runs even if previous steps fail
+        run: |
+          coverage html --omit="*/tests/*"
+          mv htmlcov coverage_report
+          echo "Coverage report is ready"
 
-    - name: Upload coverage report
-      if: always() # Ensure this step runs even if previous steps fail
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage_report
-        path: coverage_report
+      - name: Upload coverage report
+        if: always() # Ensure this step runs even if previous steps fail
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage_report
+          path: coverage_report
